--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <a href="#contacts">Контакты</a>
         </nav>
         <div>
-            Наш e-mail: <a href="mailto:mail@mail.ru">mail@mail.ru</a>
+            Наш e-mail: <a href="mailto:e-mail@mail.ru">e-mail@mail.ru</a>
         </div>
     </header>    
 </body>
