--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#services">Услуги</a>
         </nav>
         <div>
-            Наш e-mail: <a href="mailto:e-mail@mail.ru">e-mail@mail.ru</a>
+            Наш e-mail: <a href="mailto:mail@mail.ru">mail@mail.ru</a>
         </div>
     </header>    
 </body>
