--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         </nav>
         <div>
             Наш e-mail: <a href="mailto:e-mail@mail.ru">e-mail@mail.ru</a>
+            Наш адрес: Москва.
+            <a href="tel:+79009999900">+7 900 999-99-00</ а>
+            <button<Заказать звонок</button>
         </div>
     </header>    
 </body>
