--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
             <button<Заказать звонок</button>
         </div>
     </header>    
+    <h2>Выберите способ доставки</h2>
 </body>
 </html>
