--- a/index.html
+++ b/index.html
@@ -22,5 +22,6 @@
     </header>    
     <h2>Выберите пункт доставки</h2>
     <button>New button</button>
+    <button> 2</button>
 </body>
 </html>
