--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="tel:+79009999900">+7 900 999-99-00</ а>
             <button<Заказать звонок</button>
         </div>
-    </header>    
+    </header>
+    <p>Special-app-NewVer</p>     
 </body>
 </html>
