added new version

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
             <button<Заказать звонок</button>
         </div>
     </header>
-    <p>Special-app-NewVer</p>     
+    <p>Special-app-New Ver Loc</p>     
 </body>
 </html>
