--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
             <button<Заказать звонок</button>
         </div>
     </header>    
+    </header> 
+    <h2> <b>Практика 3.6.2</b></h2>   
 </body>
 </html>
