new phone and css

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         </div>
     </header>    
     </header> 
-    <h2> <b>Практика 3.6.2</b></h2>   
+    <div>Новый номер 
+
+    </div> 
 </body>
 </html>
