added new phone

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         </div>
     </header>    
     </header> 
-    <div>Новый номер 
-
+    <div>
+        Новый номер телефона 
+        <a href="tel:+79009999900">+7 900 999-99-99</ а>
     </div> 
 </body>
 </html>
