--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </nav>
         <div>
             Наш e-mail: <a href="mailto:e-mail@mail.ru">e-mail@mail.ru</a>
-            Наш адрес: Москва.
-            <a href="tel:+79009999900">+7 900 999-99-00</ а>
+            Наш адрес: город Москва.
+            <a href="tel:+799999900">+7 900 999-99-00</ а>
             <button<Заказать звонок</button>
         </div>
     </header>    
