--- a/index.html
+++ b/index.html
@@ -15,15 +15,11 @@
         </nav>
         <div>
             Наш e-mail: <a href="mailto:e-mail@mail.ru">e-mail@mail.ru</a>
-            Наш адрес: город Москва.
-            <a href="tel:+799999900">+7 900 999-99-00</ а>
+            Наш адрес: г. Москва.
+            <a href="tel:+79999999999">+7 999 999-99-99</ а>
             <button<Заказать звонок</button>
         </div>
     </header>    
     </header> 
-    <div>
-        Новый номер телефона 
-        <a href="tel:+79009999900">+7 900 999-99-99</ а>
-    </div> 
 </body>
 </html>
